--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Roll…"
+        android:text="@string/output_label_default"
         android:id="@+id/outputLabel"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -37,7 +37,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Roll"
+            android:text="@string/roll_button_text"
             android:id="@+id/rollButton"
             android:layout_weight="2" />
 
